# 3d-building-metrics

./: .coveragerc  .gitignore  Analysis-Copy1.ipynb  Analysis.ipynb  Figures-Copy1.ipynb  Figures.ipynb  LICENSE  README.md  cityCompare.py  cityPlot.py  cityStats.py  cityjson.py  extractLod.py  geometry.py  notebook.sh  pyproject.toml  pyvista_tests.ipynb  requirements.txt  shape_index.py  stats.py  tox.ini  volume.py
helpers/: geometry.py  mesh.py
src/building_metrics_3d/: cityCompare.py  cityPlot.py  cityjson.py  geometry.py  shape_index.py
src/urban_morphology_3d/: cityCompare.py  cityPlot.py  cityjson.py  extractLod.py  geometry.py  shape_index.py
src/urban_morphology_3d/helpers/: geometry.py
tests/: test_shape_index.py
