[build-system]
requires = ["setuptools>=65.3"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-building-metrics"
version = "2023.1001"
description = "3D Building Metrics"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "attrs==23.1.0",
    "certifi==2023.5.7",
    "charset-normalizer==3.2.0",
    "click==8.1.6",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "contourpy==1.1.0",
    "cycler==0.11.0",
    "Cython==3.0.0",
    "Fiona==1.9.4.post1",
    "fonttools==4.41.0",
    "geopandas==0.13.2",
    "idna==3.4",
    "importlib-metadata==6.8.0",
    "importlib-resources==6.0.0",
    "joblib==1.3.1",
    "kiwisolver==1.4.4",
    "mapbox-earcut==1.0.1",
    "matplotlib==3.7.2",
    "miniball==1.2.0",
    "numpy==1.24.4",
    "packaging==23.1",
    "pandas==2.0.3",
    "Pillow==10.0.0",
    "platformdirs==3.9.1",
    "pooch==1.7.0",
    "pymeshfix==0.16.2",
    "pyparsing==3.0.9",
    "pyproj==3.5.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pyvista==0.37.0",
    "requests==2.31.0",
    "Rtree==1.0.1",
    "scikit-learn==1.3.0",
    "scipy==1.10.1",
    "scooby==0.7.2",
    "shapely==2.0.1",
    "six==1.16.0",
    "threadpoolctl==3.2.0",
    "tqdm==4.65.0",
    "tzdata==2023.3",
    "urllib3==2.0.4",
    "vtk==9.2.6",
    "zipp==3.16.2",
]
optional-dependencies = { dev = ["bumpver", "tox",] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.bumpver]
current_version = "2023.1001"
version_pattern = "YYYY.BUILD"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]

